# parrot-winserver

./: .env.example  .gitignore  CLAUDE.md  ParrotServer.xml  README.md  clean_restart.bat  main.py  pyproject.toml
.claude/: settings.local.json
.claude/chat/: 2025-10-29-bigquery-spreadsheet-auto-creation.md
app/: config.py  main.py
app/routers/: odata.py  spreadsheet.py
app/services/: bigquery_service.py  data_loader.py  excel_com_generator.py  odata_metadata.py  odata_query_parser.py  spreadsheet_connector.py
app/utils/: auth.py  aws_secret_manager.py  gcp_auth.py  setting.py
excel_tool/: __init__.py  model.py  router.py
excel_tool/common/: __init__.py
excel_tool/common/config/: __init__.py  constant.py  setting.py
excel_tool/common/util/: auth.py  s3.py  secret_manager.py
excel_tool/handler/: __init__.py  excel_generator.py  s3_handler.py
