[project]
name = "parrot-winserver"
version = "1.0.0"
description = "Excel Generator Service - OData 연결이 포함된 Excel 파일 생성 API (Windows Server)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.40.55",
    "cachetools>=6.2.1",
    "fastapi>=0.119.0",
    "pydantic>=2.12.3",
    "pywin32>=311; sys_platform == 'win32'",
    "uvicorn>=0.38.0",
]

[tool.uv]
compile-bytecode = false

[tool.setuptools]
zip-safe = false
